# kopete-fetion

./: CMakeLists.txt  fetionaccount.cpp  fetionaccount.h  fetionaddcontactpage.cpp  fetionaddcontactpage.h  fetionchatsession.cpp  fetionchatsession.h  fetioncontact.cpp  fetioncontact.h  fetioncontactinfo.ui  fetioneditaccount.ui  fetioneditaccountwidget.cpp  fetioneditaccountwidget.h  fetionprotocol.cpp  fetionprotocol.h  fetionsession.cpp  fetionsession.h  fetionsipevent.cpp  fetionsipevent.h  fetionsipnotifier.cpp  fetionsipnotifier.h  fetionsiputils.cpp  fetionsiputils.h  fetionutils.cpp  fetionutils.h  fetionvcodedialog.cpp  fetionvcodedialog.h  kopete_fetion.desktop
icons/: CMakeLists.txt
ui/: fetionchatui.rc  fetioncontactinfo.ui
